# insurance-conformal-fraud

./: README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: demo_insurance_conformal_fraud.py
src/insurance_conformal_fraud/: __init__.py  conformal_scorer.py  consortium.py  fdr.py  integrative.py  mondrian.py  report.py
tests/: conftest.py  test_conformal_scorer.py  test_consortium.py  test_fdr.py  test_integration.py  test_integrative.py  test_mondrian.py  test_report.py
