[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-conformal-fraud"
version = "0.1.0"
description = "Conformal anomaly detection for insurance claims with BH FDR control"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = [
    "insurance",
    "fraud-detection",
    "conformal-prediction",
    "anomaly-detection",
    "fdr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "polars>=0.20",
]

[project.optional-dependencies]
catboost = ["catboost>=1.2"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-conformal-fraud"
Repository = "https://github.com/burning-cost/insurance-conformal-fraud"
Issues = "https://github.com/burning-cost/insurance-conformal-fraud/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_conformal_fraud"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
